[metadata]
name = lithopscloud
version = 1.0.0b49
author = kpavel
author_email = kpavel@il.ibm.com
description = Interactive tool for lithops configuration lithops
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lithops-cloud/lithopscloud
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/lithopscloud
install_requires =
    click==8.0.1
    inquirer==2.7.0
    ibm-cloud-sdk-core==3.10.0
    ibm-platform-services==0.19.1
    ibm-vpc==0.6.0
    ibm-cos-sdk==2.10.0
    PyYAML==5.4.1

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.data_files]
/etc/lithopscloud =
    src/lithopscloud/modules/lithops/defaults.yaml
    src/lithopscloud/modules/ray/defaults.yaml
