[metadata]
name = lithopscloud
version = 1.0.0b89
author = kpavel
author_email = kpavel@il.ibm.com
description = Interactive tool for generation of lithops configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lithops-cloud/lithopscloud
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/lithopscloud
install_requires =
    click >=8.0.1
    inquirer >=2.7.0
    ibm-cloud-sdk-core==3.10.0
    ibm-platform-services==0.19.1
    ibm-vpc==0.6.0
    ibm-cos-sdk==2.10.0
    PyYAML >=5.4.1
    ibm-code-engine-sdk==0.1.0
    ibm_watson==5.3.0
    lithops >=2.5.4
    docker >=5.0.3


[options.packages.find]
where = src

[options.package_data]
* = *.yaml
