[metadata]
name = lithopscloud
version = 1.0.0b93
author = kpavel
author_email = kpavel@il.ibm.com
description = Interactive tool for generation of lithops configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lithops-cloud/lithopscloud
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/lithopscloud
install_requires =
    click >=8.0.1
    inquirer >=2.7.0
    ibm-cloud-sdk-core
    ibm-platform-services
    ibm-cos-sdk
    PyYAML >=5.4.1
    ibm-code-engine-sdk
    ibm_watson
    lithops >=2.5.4
    docker >=5.0.3
    ibm-vpc

[options.packages.find]
where = src

[options.package_data]
* = *.yaml
